After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725206 - rtspconnection: Missing include file
rtspconnection: Missing include file
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-26 10:47 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-02-26 11:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add missing include (676 bytes, patch)
2014-02-26 10:48 UTC, Ognyan Tonchev (redstar_)
needs-work Details | Review
rtspconnection: Add missing include (912 bytes, patch)
2014-02-26 11:18 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-02-26 10:47:31 UTC
gst_rtsp_connection_set_qos_dscp () does nothing because of a missing include which defines the IP_TOS socket option.
Comment 1 Ognyan Tonchev (redstar_) 2014-02-26 10:48:10 UTC
Created attachment 270361 [details] [review]
Add missing include
Comment 2 Tim-Philipp Müller 2014-02-26 11:03:29 UTC
Comment on attachment 270361 [details] [review]
Add missing include

Let's try to avoid platform-specific includes in our code.

I think #include <gio/gnetworking.h> should do the trick as well - could you check?

Could you also add a GST_FIXME to the function where it takes a do-nothing codepath?
Comment 3 Ognyan Tonchev (redstar_) 2014-02-26 11:18:04 UTC
Created attachment 270371 [details] [review]
rtspconnection: Add missing include

Thanks, yes, #include <gio/gnetworking.h> does the job too.
Comment 4 Tim-Philipp Müller 2014-02-26 11:27:07 UTC
Thanks, pushed:

commit 5445682c6ac19168833642d36f3870f2b9053cc5
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Feb 26 11:45:24 2014 +0100

    rtspconnection: Add missing include
    
    https://bugzilla.gnome.org/show_bug.cgi?id=725206
Comment 5 Tim-Philipp Müller 2014-02-26 11:47:32 UTC
One thing I forgot:

commit 14b82bbc9a50530e4bf9c66f9b99fb5a0f931ce4
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Wed Feb 26 11:43:06 2014 +0000

    rtsp: fix build with older GLib versions
    
    The gio/gnetworking.h header is only available since glib 2.36
    
    https://bugzilla.gnome.org/show_bug.cgi?id=725206